@@ -1,5 +1,8 @@
 Changes with Apache 2.0.32-dev
 
+  *) Performance: Reuse per-connection transaction pools in the
+     worker MPM, rather than destroying and recreating them.  [Brian Pane]
+
   *) mod_negotiation: ForceLanguagePriority now uses 'Prefer' as the
      default if the directive is not specified.  This mirrors older
      behavior without changes to the httpd.conf.  [William Rowe]
